<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:orientation="vertical"
        android:layout_weight="1.9">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="8sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/smiley"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_thank_you_heading"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/apply_thank_processed"
            android:textColor="@color/black"
            android:paddingBottom="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/apply_thank_transaction"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:background="@color/compare_divider">
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/apply_thank_like_app"
            android:paddingTop="20dp"
            android:textColor="@color/black"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/apply_thank_if_like_app"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <Button
            android:id="@+id/button_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_rate"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button_rate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_weight="0.1"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_go_back"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button_next" />

    </LinearLayout>

</LinearLayout>