<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5">

    <ScrollView
        android:id="@+id/scroll_yourself"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:scrollbarSize="1dp"
        android:scrollbarStyle="outsideOverlay">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.1">
                <TextView
                    android:id="@+id/apply_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_heading"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/apply_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_step1"
                    android:layout_gravity="center"
                    android:textSize="@dimen/text_12"/>

                <TextView
                    android:id="@+id/apply_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:text="Charlize Theron"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/apply_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_age"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/apply_mobileNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_mobile"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/apply_nationalID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="National ID:"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/apply_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_email"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_address"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3">
                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/address"
                    android:gravity="top"
                    android:ems="10"
                    android:padding="10dp"
                    android:maxLines="6"
                    android:textSize="@dimen/text_size"
                    android:inputType="textCapSentences|textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_upload"
                    android:textColor="@color/black"
                    android:paddingBottom="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_choose_gallary"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:layout_gravity="center"
                        android:text="@string/button_gallery"
                        android:background="@drawable/button_gallery"
                        android:drawableStart="@drawable/gallery_image"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/compare_aed"
                        android:visibility="invisible"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

                    <Button
                        android:id="@+id/button_choose_camera"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="5dp"
                        android:layout_gravity="center"
                        android:text="@string/button_camera"
                        android:drawableStart="@drawable/camera"
                        android:background="@drawable/button_camera" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.6"
                android:orientation="horizontal">
                <HorizontalScrollView
                    android:id="@+id/horizontal_scroll1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">
                    <LinearLayout
                        android:id="@+id/linear1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/button_continue"
                    android:textColor="@color/colorAccent"
                    android:background="@drawable/button_next" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>