<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_yourself"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="32dp"
        android:paddingStart="32dp"
        android:scrollbarSize="1dp"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/home_heading"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/home_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:background="@drawable/edittext_box"
                android:textColor="@color/black"
                android:inputType="textCapWords"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:text="@string/home_age"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_box"
                android:textColor="@color/black"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:text="@string/home_mobileno"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/mobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_box"
                android:textColor="@color/black"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:hint="91234567"
                android:padding="5dp"
                android:ems="8"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:text="@string/home_nationalId"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/nationalId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_box"
                android:textColor="@color/black"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:padding="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:text="@string/home_email"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_box"
                android:textColor="@color/black"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:padding="5dp" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:text="@string/home_terms_condition" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/get_quote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_next"
                    android:text="@string/button_get_quote"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>