<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/vehicle_tab_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Name: Charlize Theron"
        android:textColor="@color/black"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@color/compare_divider"
        android:paddingTop="5dp">
    </LinearLayout>

    <TextView
        android:id="@+id/vehicle_tab_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/apply_age"
        android:textColor="@color/black"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@color/compare_divider"
        android:paddingTop="5dp">
    </LinearLayout>

    <TextView
        android:id="@+id/vehicle_tab_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/apply_mobile"
        android:textColor="@color/black"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/vehicle_tab_nationalId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="National ID: "
        android:textColor="@color/black"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@color/compare_divider"
        android:paddingTop="5dp">
    </LinearLayout>

    <TextView
        android:id="@+id/vehicle_tab_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/apply_email"
        android:textColor="@color/black"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@color/compare_divider"
        android:paddingTop="5dp">
    </LinearLayout>
</LinearLayout>